# FileConverter

./: Dockerfile  FileConverter.sln  README.md
FileConverter/: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.alternative  FileConverter.csproj  FileConverter.http  FileConverter.sln  Program.Logging.cs  Program.cs  README.md  README_DOCKER.md  README_PROXY.md  appsettings.Local.json  appsettings.json  build.sh  docker-compose.yml  packages.props  translate_logs.sh  translate_logs_windows.md
FileConverter/BackgroundServices/: JobRecoveryHostedService.cs  TempFileCleanupHostedService.cs
FileConverter/Controllers/: HealthController.cs  MetricsController.cs  VideoConverterController.cs
FileConverter/Data/: AppDbContext.cs  ConversionLogRepository.cs  DbContextFactory.cs  IConversionLogRepository.cs  IJobRepository.cs  IMediaItemRepository.cs  InitialMigration.cs  JobRepository.cs  MediaItemRepository.cs
FileConverter/EssentiaWrapper/: CMakeLists.txt  EssentiaWrapper.cpp  EssentiaWrapper.h  pch.h
FileConverter/HealthChecks/: DatabaseHealthCheck.cs  TempStorageHealthCheck.cs
FileConverter/Helpers/: UrlValidator.cs  VideoHasher.cs
FileConverter/Middleware/: GlobalExceptionHandler.cs  RequestProfilingMiddleware.cs
FileConverter/Migrations/: 20250307082900_init.Designer.cs  20250307082900_init.cs  20250416210312_AddMediaItem.Designer.cs  20250416210312_AddMediaItem.cs  20250422215122_AddConversionLogs.Designer.cs  20250422215122_AddConversionLogs.cs  20250614190426_AddKeyframeUrls.Designer.cs  20250614190426_AddKeyframeUrls.cs  20250614192549_AddKeyframeUrlsToJobs.Designer.cs  20250614192549_AddKeyframeUrlsToJobs.cs  20250614194152_AddKeyframeUrlsToTables.Designer.cs  20250614194152_AddKeyframeUrlsToTables.cs  20250725110911_AddVideoDurationToTables.Designer.cs  20250725110911_AddVideoDurationToTables.cs  20250725112402_RemoveKeyframeUrlsColumns.Designer.cs  20250725112402_RemoveKeyframeUrlsColumns.cs  20250726095350_AddKeyframesToMediaItems.Designer.cs  20250726095350_AddKeyframesToMediaItems.cs  20250730112119_addAudioAnalysis.Designer.cs  20250730112119_addAudioAnalysis.cs  20250829102739_AddProxyServersTable.Designer.cs  20250829102739_AddProxyServersTable.cs  20251213165941_AddBatchIdIndexAndPoolOptimizations.Designer.cs  20251213165941_AddBatchIdIndexAndPoolOptimizations.cs  20251216115042_AddAssemblyAiAudioUrlToMediaItems.Designer.cs  20251216115042_AddAssemblyAiAudioUrlToMediaItems.cs  20251216115918_AddAssemblyAiAudioUrlToConversionJobs.Designer.cs  20251216115918_AddAssemblyAiAudioUrlToConversionJobs.cs  (+1 more)
(+75 files in other folders)
